# ramazon-api

./: .gitignore  LICENSE  README.md  helpers.py  main.py  openapi.json  pyproject.toml  requirements.txt  schemas.py
.github/workflows/: main.yml
api/: __init__.py  schemas.py  settings.py  utils.py
api/database/: models.py
api/services/: dates.py  mock.py  regions.py  simulate.py
core/dates/: dates.py
core/regions/: regions.py
database/: models.py
tests/: test_base_routes.py  test_dates.py  test_regions.py  utils.py
