[tool.poetry]
name = "ramazon-api"
version = "2.0.0"
description = "API for Ramadan! Written in FastAPI"
authors = ["Abduaziz <abduaziz.ziyodov@mail.ru>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.70.0"
aiosqlite = "0.17.0"
anyio = "3.4.0"
asgiref = "3.4.1"
autopep8 = "1.6.0"
click = "8.0.3"
colorama = "0.4.4"
h11 = "0.12.0"
idna = "3.3"
iso8601 = "0.1.16"
pycodestyle = "2.8.0"
pydantic = "1.8.2"
pypika-tortoise = "0.1.1"
pytz = "2021.3"
sniffio = "1.2.0"
starlette = "0.16.0"
toml = "0.10.2"
tortoise-orm = "0.17.8"
typing-extensions = "4.0.1"
uvicorn = "0.15.0"
rich = "10.15.2"
httpx = "^0.22.0"
pytest = "^7.1.0"
trio = "^0.20.0"
pytest-asyncio = "^0.18.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
